Fixed Double Quote.

--- a/Translation/Chinese/Text Strings.json
+++ b/Translation/Chinese/Text Strings.json
@@ -1,113 +1,113 @@
 {
   "TRANSLATED BY:":"beck8625#0458",
 
-  "Show all available commands.": “顯示所有指令”,
-  "Show all enabled modules.": “顯示已啟用的模組”,
-  "Reset your settings to default. Useful when you messed up with the settings": “重置所有模組，在你亂掉的時候很好用”,
-  "Turn on/off Advance Target Information": “開啟/關閉進階目標資訊”,
-  "Unlock and set FPS. Value: 1-120": “解除鎖定並設置FPS:1~120”,
-  "Refresh client and dump cache.": “重新載入帳戶以及設置”,
-  "Check your current latency.": “查看目前的延遲”,
-  "Reconnect when you get disconnected.": “當你斷線時自動重新連接”,
+  "Show all available commands.": "顯示所有指令",
+  "Show all enabled modules.": "顯示已啟用的模組",
+  "Reset your settings to default. Useful when you messed up with the settings": "重置所有模組，在你亂掉的時候很好用",
+  "Turn on/off Advance Target Information": "開啟/關閉進階目標資訊",
+  "Unlock and set FPS. Value: 1-120": "解除鎖定並設置FPS:1~120",
+  "Refresh client and dump cache.": "重新載入帳戶以及設置",
+  "Check your current latency.": "查看目前的延遲",
+  "Reconnect when you get disconnected.": "當你斷線時自動重新連接",
 
   "__@afk__": "__@afk__",
-  "Turn on/off Auto TrickDead": “開啟/關閉自動裝死”,
-  "Set hp/sp conditions to trigger.": “觸發的hp/sp百分比設置”,
+  "Turn on/off Auto TrickDead": "開啟/關閉自動裝死",
+  "Set hp/sp conditions to trigger.": "觸發的hp/sp百分比設置",
 
   "__@as__": "__@as__",
-  "Turn on/off Auto Skill EX": “開啟/關閉擴充自動技能”,
-  "List all available skills that can be extended.": “顯示可擴充的技能表格”,
-  "Set your desired manual skill slot as AUTO": “設置你所需的手動技能格數為自動”,
-  "Reset current list.": “重置擴充自動技能”,
+  "Turn on/off Auto Skill EX": "開啟/關閉擴充自動技能",
+  "List all available skills that can be extended.": "顯示可擴充的技能表格",
+  "Set your desired manual skill slot as AUTO": "設置你所需的手動技能格數為自動",
+  "Reset current list.": "重置擴充自動技能",
 
   "__@selftarget__": "__@selftarget__",
-  "Turn on/off Self-Target Module.": “開啟/關閉自動自我鎖定模組”,
-  "Activate Self-Target for all skills.": “啟動所有技能鎖定自己”,
-  "List all ID of AoE skills.": “顯示可自動鎖定自己的技能ID表格,
-  "Set specific skill id as self-target.": “設置鎖定自己的技能ID”,
-  "Reset selt-target list.": “重置自我鎖定技能”,
+  "Turn on/off Self-Target Module.": "開啟/關閉自動自我鎖定模組",
+  "Activate Self-Target for all skills.": "啟動所有技能鎖定自己",
+  "List all ID of AoE skills.": "顯示可自動鎖定自己的技能ID表格",
+  "Set specific skill id as self-target.": "設置鎖定自己的技能ID",
+  "Reset selt-target list.": "重置自我鎖定技能",
 
   "__priestsupport__": "__priestsupport__",
-  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": “解除補師只有隊長在戰鬥才會使用buff的限制”,
-  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": “自動buff不在隊伍中的角色，只有非隊伍範圍技能可使用”,
-  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": “設置對於特定角色的自動buff，角色對補師私訊’-buffme’即可使用”,
-  "Reset buff list.": “重置自動buff模組”,
-  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "自動使用debuff，例如天怒和緩速”,
+  "Remove buffing restrictions of some buffs that will be casted only when leader is in battle.": "解除補師只有隊長在戰鬥才會使用buff的限制",
+  "Buff specific character even without party. (Limited to non-party buffs Heal/Kyrie/Bless/Resu)": "自動buff不在隊伍中的角色，只有非隊伍範圍技能可使用",
+  "Set specific id to buff. (Shortcut: whisper '-buffme' to the priest)": "設置對於特定角色的自動buff，角色對補師私訊’-buffme’即可使用",
+  "Reset buff list.": "重置自動buff模組",
+  "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "自動使用debuff，例如天怒和緩速",
 
   "__autoquest__": "__autoquest__",
-  "Turn on/off Quest Assistant.": “開啟/關閉自動任務”,
-  "Turn on/off Questing Warping upon accepting quest.": “開啟/關閉自動任務時的自動傳送”,
+  "Turn on/off Quest Assistant.": "開啟/關閉自動任務",
+  "Turn on/off Questing Warping upon accepting quest.": "開啟/關閉自動任務時的自動傳送",
 
   "__autosuicide__": "__autoquest__",
-  "Turn on/off Auto Suicide.": “開啟/關閉自動自殺”,
-  "Save current coordinate and map for leveling down.": “儲存目前的地圖及自殺座標”,
+  "Turn on/off Auto Suicide.": "開啟/關閉自動自殺",
+  "Save current coordinate and map for leveling down.": "儲存目前的地圖及自殺座標",
 
   "__lockspot__": "__lockspot__",
-  "Turn on/off lockspot module.": “開啟/關閉掛網鎖定區域模組”,
-  "Set farming radius. Radius can be set from 0 to 200.": “設定自動掛網鎖定區域模組範圍:0~200”,
-  "Save your current coordinate as return piont.": “設置當前位置為回歸點”,
+  "Turn on/off lockspot module.": "開啟/關閉掛網鎖定區域模組",
+  "Set farming radius. Radius can be set from 0 to 200.": "設定自動掛網鎖定區域模組範圍:0~200",
+  "Save your current coordinate as return piont.": "設置當前位置為回歸點",
 
   "__autoflywing__": "__autoflywing__",
-  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": “自動蒼翅當你的血量低於30%，並使用裝死恢復血量”,
+  "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "自動蒼翅當你的血量低於30%，並使用裝死恢復血量",
 
   "__calculator__": "__calculator__",
-  "Turn on/off EXP calculator.": “開啟/關閉經驗值計算”,
-  "Reset EXP calculator.": “重置經驗值計算”,
-  "Turn on/off ZENY calculator.": “開啟/關閉deny計算”,
-  "Reset ZENY calculator.": “重置deny計算”,
-  "Access endless tower anywhere.": “從任何定方傳送至無限塔”,
-  "Jump to specific floor.": “傳送至特定樓層”,
-  "Turn on/off UI Warp & UI Storage for NPCs": “開啟/關閉npc的傳送以及倉庫功能”,
-  "Auto accepts incoming PT request.": “自動接受組隊邀請”,
-  "Auto accepts incoming ET request.": “自動接受隊伍邀請”,
-  "Auto accepts incoming Follow request.": “自動一鍵上車”,
+  "Turn on/off EXP calculator.": "開啟/關閉經驗值計算",
+  "Reset EXP calculator.": "重置經驗值計算",
+  "Turn on/off ZENY calculator.": "開啟/關閉deny計算",
+  "Reset ZENY calculator.": "重置deny計算",
+  "Access endless tower anywhere.": "從任何定方傳送至無限塔",
+  "Jump to specific floor.": "傳送至特定樓層",
+  "Turn on/off UI Warp & UI Storage for NPCs": "開啟/關閉npc的傳送以及倉庫功能",
+  "Auto accepts incoming PT request.": "自動接受組隊邀請",
+  "Auto accepts incoming ET request.": "自動接受隊伍邀請",
+  "Auto accepts incoming Follow request.": "自動一鍵上車",
 
   "__follow__": "_follow_",
-  "Turn on/off Auto Follow for Non-Party.": “開啟/關閉非組隊跟隨”,
-  "Set leader id to follow.": “設置跟隨者ID”,
-  "Set minimum follow radius.": “設定最小跟隨半徑”,
+  "Turn on/off Auto Follow for Non-Party.": "開啟/關閉非組隊跟隨",
+  "Set leader id to follow.": "設置跟隨者ID",
+  "Set minimum follow radius.": "設定最小跟隨半徑",
 
   "_hplant_": "_hplant_",
-  "Turn on/off Auto-Cast Hell Plant": “開啟/關閉自動地獄植物”,
-  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": “設定當前位置為地獄植物坐標，可設置最多三個點”,
+  "Turn on/off Auto-Cast Hell Plant": "開啟/關閉自動地獄植物",
+  "Save current coordinate as Hell Plant's drop point. Can be used up to 3 points.": "設定當前位置為地獄植物坐標，可設置最多三個點",
 
   "_mvp_module_": "_mvp module_",
-  "Turn on/off MVP modoule.": “開啟/關閉MVP模組”,
-  "Set tracking to auto or manual.": “自動/手動偵測王“,
-  "Set notification and target to MVP/MINI/ALL only.": “MVP/MINI/ALL，設定王/小王/全部”,
-  "Filter MVP Boards to MVP/MINI/ALL only.": “王榜的顯示設置，MVP/MINI/ALL，設定王/小王/全部”,
+  "Turn on/off MVP modoule.": "開啟/關閉MVP模組",
+  "Set tracking to auto or manual.": "自動/手動偵測王",
+  "Set notification and target to MVP/MINI/ALL only.": "MVP/MINI/ALL，設定王/小王/全部",
+  "Filter MVP Boards to MVP/MINI/ALL only.": "王榜的顯示設置，MVP/MINI/ALL，設定王/小王/全部",
 
   "_class_specific_": "class specific",
-  "Turn on/off SAGE auto switch bolts module.": “開啟/關閉賢者自動切換法術模組”,
-  "Turn on/off BOW class auto switch arrows module.": “開啟/關閉射手自動切換箭矢模組”,
-  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "開啟/關閉坦自動怒爆模組“,
+  "Turn on/off SAGE auto switch bolts module.": "開啟/關閉賢者自動切換法術模組",
+  "Turn on/off BOW class auto switch arrows module.": "開啟/關閉射手自動切換箭矢模組",
+  "Turn on/off SWORDSMAN class auto Magnum Break buff.": "開啟/關閉坦自動怒爆模組",
 
   "_spot_search_": "spot search",
-  "List all available monsters and their ids in your current map.": “顯示當前可自動偵測魔物ID表格”,
-  "Go to the nearest respawn spot of the selected monster.": “前往最近的偵測魔物復活點”,
+  "List all available monsters and their ids in your current map.": "顯示當前可自動偵測魔物ID表格",
+  "Go to the nearest respawn spot of the selected monster.": "前往最近的偵測魔物復活點",
 
-  "_gearswitch_": “自動換裝”,
-  "Save your current equipment and card preset to specific slot.": “儲存目前裝備及卡片設置”,
-  "Increase/Decrease maximum emoji gear switch.": “增加裝備及卡片設置欄位”,
+  "_gearswitch_": "自動換裝",
+  "Save your current equipment and card preset to specific slot.": "儲存目前裝備及卡片設置",
+  "Increase/Decrease maximum emoji gear switch.": "增加裝備及卡片設置欄位",
 
-  "_market_": “交易所”,
-  "Open Exchange Shop": “開啟交易所”,
-  "Open Guild Donate Window": “開啟公會貢獻”,
-  "Open Shop Window": “開啟商店”,
+  "_market_": "交易所",
+  "Open Exchange Shop": "開啟交易所",
+  "Open Guild Donate Window": "開啟公會貢獻",
+  "Open Shop Window": "開啟商店",
 
-  "_warp_": “傳送”,
-  "Change channel. (Channel or Country Code + Channel)": “跳世界線（頻道或頻道+城市）”,
-  "Drop you to your born point.": “回到重生點”,
-  "List all unlocked map.": “顯示所有未解鎖地圖”,
-  "Go to specific map. (Requirements: Cats/Pets/Npcs)": “傳送至特定地圖（需求：傭兵貓/寵物/npc）”,
-  "Same as butterfly wing effect.": “蝴蝶翅膀功能”,
-  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": “使用卡普拉傳送功能（需求：傭兵貓/寵物/npc）”,
-  "Turn on/off warp emoji shortcuts.": “開啟/關閉emoji的傳送快捷鍵”,
+  "_warp_": "傳送",
+  "Change channel. (Channel or Country Code + Channel)": "跳世界線（頻道或頻道+城市）",
+  "Drop you to your born point.": "回到重生點",
+  "List all unlocked map.": "顯示所有未解鎖地圖",
+  "Go to specific map. (Requirements: Cats/Pets/Npcs)": "傳送至特定地圖（需求：傭兵貓/寵物/npc）",
+  "Same as butterfly wing effect.": "蝴蝶翅膀功能",
+  "Use kafra warp services everywhere. (Requirements: Cats/Pets/Npcs)": "使用卡普拉傳送功能（需求：傭兵貓/寵物/npc）",
+  "Turn on/off warp emoji shortcuts.": "開啟/關閉emoji的傳送快捷鍵",
 
-  "_multitarget_and_flylock_": “多重鎖定以及蒼翅偵測”,
-  "List all available monsters and their ids in your current map.": “顯示當前地圖可多重偵測魔物的ID表格”,
-  "Set multiple ids as Auto-Battle target.": “設定多重ID使用自動偵測戰鬥”,
-  "Turn on/off Multi-Mob feature.": “開啟/關閉多重鎖定模組”,
-  "Turn on/off FlyLock feature.": “開啟/關閉蒼翅偵測”,
-  "Set multiple ids as FlyLock target.": “設置蒼翅偵測的魔物ID”
+  "_multitarget_and_flylock_": "多重鎖定以及蒼翅偵測",
+  "List all available monsters and their ids in your current map.": "顯示當前地圖可多重偵測魔物的ID表格",
+  "Set multiple ids as Auto-Battle target.": "設定多重ID使用自動偵測戰鬥",
+  "Turn on/off Multi-Mob feature.": "開啟/關閉多重鎖定模組",
+  "Turn on/off FlyLock feature.": "開啟/關閉蒼翅偵測",
+  "Set multiple ids as FlyLock target.": "設置蒼翅偵測的魔物ID"
 }
