--- a/Translation/Malaysia/Text Strings.json
+++ b/Translation/Malaysia/Text Strings.json
@@ -33,11 +33,11 @@
   "Turn on/off priest auto debuffer. (Lex and Decrease Agi)": "Menghidupkan/mematikan skill debuffer priest iaitu : Lex and Decrease Agi.",
 
   "__autoquest__": "__autoquest__",
-  "Turn on/off Quest Assistant.": "Menghidupkan/mematikan Modul Pembantu Quest",
-  "Turn on/off Questing Warping upon accepting quest.": "Menghidupkan/mematikan warp/teleport secara automatik apabila menerima quest",
+  "Turn on/off Quest Assistant.": "Menghidupkan/mematikan Modul Pembantu Quest.",
+  "Turn on/off Questing Warping upon accepting quest.": "Menghidupkan/mematikan warp/teleport secara automatik apabila menerima quest.",
 
   "__autosuicide__": "__autoquest__",
-  "Turn on/off Auto Suicide.": "Menghidupkan/mematikan Modul Bunuh Diri",
+  "Turn on/off Auto Suicide.": "Menghidupkan/mematikan Modul Bunuh Diri.",
   "Save current coordinate and map for leveling down.": "Menyimpan koordinat semasa dan lokasi untuk mengurangkan level.",
 
   "__lockspot__": "__lockspot__",
@@ -48,16 +48,16 @@
   "__autoflywing__": "__autoflywing__",
   "Turn on/off auto flywing when your HP drops below 30%. It will use TrickDead to recover your HP.": "Menghidupkan / mematikan auto flywing apabila HP anda berada di bawah 30%. Ia akan menggunakan skill TrickDead untuk memulihkan HP anda.",
   "__calculator__": "__calculator__",
-  "Turn on/off EXP calculator.": "Menghidupkan/mematikan Pengiraan EXP",
-  "Reset EXP calculator.": "Menetapkan semula Pengiraan EXP",
-  "Turn on/off ZENY calculator.": "Menghidupkan/mematikan Pengiraan ZENY",
+  "Turn on/off EXP calculator.": "Menghidupkan/mematikan Pengiraan EXP.",
+  "Reset EXP calculator.": "Menetapkan semula Pengiraan EXP.",
+  "Turn on/off ZENY calculator.": "Menghidupkan/mematikan Pengiraan ZENY.",
   "Reset ZENY calculator.": "Menetapkan semula Pengiraan ZENY.",
-  "Access endless tower anywhere.": "Menggunakan servis Endless Tower dari mana-mana lokasi atau tempat",
+  "Access endless tower anywhere.": "Menggunakan servis Endless Tower dari mana-mana lokasi atau tempat.",
   "Jump to specific floor.": "Bergerak ke tingkat tertentu tanpa ada halangan.",
-  "Turn on/off UI Warp & UI Storage for NPCs": "Menghidupkan / mematikan UI Warp & Storage UI untuk NPC",
-  "Auto accepts incoming PT request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Party",
-  "Auto accepts incoming ET request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Endless Tower",
-  "Auto accepts incoming Follow request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Di-ikuti(Follow)",
+  "Turn on/off UI Warp & UI Storage for NPCs": "Menghidupkan / mematikan UI Warp & Storage UI untuk NPC.",
+  "Auto accepts incoming PT request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Party.",
+  "Auto accepts incoming ET request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Endless Tower.",
+  "Auto accepts incoming Follow request.": "Sekiranya diaktifkan,maka secara automatik akan menerima sebarang permintaan untuk Di-ikuti(Follow).",
 
   "__follow__": "_follow_",
   "Turn on/off Auto Follow for Non-Party.": "Menghidupkan/mematikan aturan Di-ikuti(Follow) untuk Bukan-Party.",
@@ -88,9 +88,9 @@
   "Increase/Decrease maximum emoji gear switch.": "Menambah atau mengurangkan bilangan emoji untuk pertukaran equipment.",
 
   "_market_": "",
-  "Open Exchange Shop": "Memaparkan Exchange Shop",
-  "Open Guild Donate Window": "Memaparkan Guild Donate UI",
-  "Open Shop Window": "Memaparkan Shop UI",
+  "Open Exchange Shop": "Memaparkan Exchange Shop.",
+  "Open Guild Donate Window": "Memaparkan Guild Donate UI.",
+  "Open Shop Window": "Memaparkan Shop UI.",
 
   "_warp_": "",
   "Change channel. (Channel or Country Code + Channel)": "Menukar saluran. (Saluran atau Kod Negara + Saluran).",
